//protoc --gofast_out=. ./p2p/msg.proto
syntax = "proto3";

option go_package = "./p2p/msgpb";

message Message {
  //数据
  bytes data = 1;
  //签名
  bytes signature = 2;
}

message Peer {
  string pubkey = 1;
  string multiaddr = 2;
}

message FindPeerReq {
  //目标节点
  string target_pubkey = 2;
  //路由节点
  repeated Peer route = 3;
}

message FindPeerResp {
  //目标节点
  string target_pubkey = 2;
  //路由节点
  repeated Peer route = 3;
}

message FindValueReq {
  string hash = 1;
}

message FindValueResp {
  bytes data = 1;
}

message GetBlockReq {
  string hash = 1;
}

message SaveBlockReq {
  message Proof {
    repeated bytes siblings = 3;
    uint32 path = 4;
  }
  bytes block = 1;
  bytes cid = 2;
  Proof proof = 3;
}